--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/parser": "^7.25.7",
     "@clerk/clerk-react": "^5.7.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -17,10 +18,14 @@
     "@mui/material": "^6.0.2",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.1",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-live": "^4.1.7",
     "react-router-dom": "^6.24.1",
+    "react-syntax-highlighter": "^15.5.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
